<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.tpddns.aion</groupId>
    <artifactId>aion-mqtt</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.9.22</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <mainClass>cn.tpddns.aion.example.MqttServerTest</mainClass>
                            <!-- ... -->
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.8.1</version>
                        <configuration>
                            <release>20</release>
                            <compilerArgs>--enable-preview</compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>


        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.7</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.4.7</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.7</version>
        </dependency>

    </dependencies>

    <!--    <build>-->
    <!--        <finalName>test</finalName>-->
    <!--        <resources>-->
    <!--            <resource>-->
    <!--                <directory>src/main/resources</directory>-->
    <!--                <includes>-->
    <!--                    <include>**/**</include>-->
    <!--                </includes>-->
    <!--            </resource>-->
    <!--        </resources>-->
    <!--        <plugins>-->
    <!--            <plugin>-->
    <!--                <groupId>org.apache.maven.plugins</groupId>-->
    <!--                <artifactId>maven-compiler-plugin</artifactId>-->
    <!--                <version>3.8.1</version>-->
    <!--                <configuration>-->
    <!--                    <release>20</release>-->
    <!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
    <!--                </configuration>-->
    <!--            </plugin>-->
    <!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
    <!--&lt;!&ndash;                <groupId>org.openjfx</groupId>&ndash;&gt;-->
    <!--&lt;!&ndash;                <artifactId>javafx-maven-plugin</artifactId>&ndash;&gt;-->
    <!--&lt;!&ndash;                <version>0.0.3</version>&ndash;&gt;-->
    <!--&lt;!&ndash;                <configuration>&ndash;&gt;-->
    <!--&lt;!&ndash;                    <mainClass>test/cn.tpddns.aion.Main</mainClass>&ndash;&gt;-->
    <!--&lt;!&ndash;                </configuration>&ndash;&gt;-->
    <!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
    <!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
    <!--&lt;!&ndash;                <artifactId>maven-shade-plugin</artifactId>&ndash;&gt;-->
    <!--&lt;!&ndash;                <version>3.2.4</version>&ndash;&gt;-->
    <!--&lt;!&ndash;                <executions>&ndash;&gt;-->
    <!--&lt;!&ndash;                    <execution>&ndash;&gt;-->
    <!--&lt;!&ndash;                        <phase>package</phase>&ndash;&gt;-->
    <!--&lt;!&ndash;                        <goals>&ndash;&gt;-->
    <!--&lt;!&ndash;                            <goal>shade</goal>&ndash;&gt;-->
    <!--&lt;!&ndash;                        </goals>&ndash;&gt;-->
    <!--&lt;!&ndash;                        <configuration>&ndash;&gt;-->
    <!--&lt;!&ndash;                            <transformers>&ndash;&gt;-->
    <!--&lt;!&ndash;                                <transformer&ndash;&gt;-->
    <!--&lt;!&ndash;                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">&ndash;&gt;-->
    <!--&lt;!&ndash;                                    <mainClass>cn.tpddns.aion.Main</mainClass>&ndash;&gt;-->
    <!--&lt;!&ndash;                                </transformer>&ndash;&gt;-->
    <!--&lt;!&ndash;                            </transformers>&ndash;&gt;-->
    <!--&lt;!&ndash;                        </configuration>&ndash;&gt;-->
    <!--&lt;!&ndash;                    </execution>&ndash;&gt;-->
    <!--&lt;!&ndash;                </executions>&ndash;&gt;-->
    <!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
    <!--        </plugins>-->
    <!--    </build>-->
</project>
